--- a/pages/skin-color.html
+++ b/pages/skin-color.html
@@ -14,15 +14,16 @@
     <button id="darkModeToggle">Toggle Dark Mode</button>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="blood-types.html">Blood Types</a></li>
-      <li><a href="eye-color.html">Eye Color</a></li>
-      <li><a href="skin-color.html">Skin Color</a></li>
-      <li><a href="height.html">Height</a></li>
-    </ul>
-  </nav>  
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="blood-types.html">Blood Types</a></li>
+            <li><a href="eye-color.html">Eye Color</a></li>
+            <li><a href="skin-color.html">Skin Color</a></li>
+            <li><a href="height.html">Height</a></li>
+            <li><a href="hair-color.html">Hair Color</a></li>
+        </ul>
+    </nav> 
   
   <main class="container">
     <div class="left-column">
