feat: Update copyright and contact information
Updated the README and LICENSE to reflect the new project owner, FadedCloud.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
     <p>Explore different traits and their inheritance patterns based on Mendelian genetics.</p>
     <button id="darkModeToggle">Toggle Dark Mode</button>
   </header>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="pages/blood-types.html">Blood Types</a></li>
-      <li><a href="pages/eye-color.html">Eye Color</a></li>
-      <li><a href="pages/skin-color.html">Skin Color</a></li>
-      <li><a href="pages/height.html">Height</a></li>
-      <li><a href="pages/hair-color.html">Hair Color</a></li>
-    </ul>
-  </nav>  
   
   <main class="container">
     <div class="left-column">
@@ -86,5 +75,7 @@
 
   <script src="js/script.js"></script>
   <script src="js/darkmode.js"></script>
+  <script src="js/footer.js"></script>
+  <script src="js/nav.js"></script>
 </body>
 </html>
