--- a/pages/blood-types.html
+++ b/pages/blood-types.html
@@ -15,17 +15,6 @@
         <button id="darkModeToggle">Toggle Dark Mode</button>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="blood-types.html">Blood Types</a></li>
-            <li><a href="eye-color.html">Eye Color</a></li>
-            <li><a href="skin-color.html">Skin Color</a></li>
-            <li><a href="height.html">Height</a></li>
-            <li><a href="hair-color.html">Hair Color</a></li>
-        </ul>
-    </nav>
-
     <main class="container">
         <div class="left-column">
             <section>
@@ -92,12 +81,10 @@
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Ponder, Anthony. All rights reserved.</p>
-    </footer>
-    
     <script src="../js/script.js"></script>
     <script src="../js/darkmode.js"></script>
     <script src="../js/alleles/bloodType.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
 </body>
 </html>
